fix(hierarchy): prevent text-wrapping on pending & error numbers

--- a/src/app/hierarchy/hierarchy.component.css
+++ b/src/app/hierarchy/hierarchy.component.css
@@ -13,6 +13,7 @@ span.total {
     font-size: 0.65rem;
     vertical-align: middle;
     color: white;
+    text-wrap: nowrap;
 }
 
 a.hierarchy.pending,
